--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body, html {
 }
 
 h2 {
-    color: #0033cc;
+    color:rgb(75, 213, 238);
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 200%;
@@ -30,17 +30,21 @@ h2 {
 
 img {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    
 }
 
 p {
     color: #ffd700;
+} 
+
+.titles {
+    text-align: center;
 }
 
 /* Animations */
 
 .animate-h2 {
+    z-index: 1;
     opacity: 0;
     animation: fade 5s 1s 1;
     -moz-animation: fade 5s 1s 1;
@@ -48,18 +52,27 @@ p {
     -o-animation: fade 5s 1s 1; 
 }
 
-.animate-becode {
+.logo {
+    position: absolute;
+    transform: translateY(-45%);
+    left: 40%;
+    z-index: 1;
+    margin: auto;
+    animation: logo 7s ease-out 9s;
     opacity: 0;
-    animation: logo 10s ease-out 6s 1;
+}
+
+.logo img {
+    width: inherit;
 }
 
 .title {
     position: absolute;
     top: 100%;
-    animation: scroll 100s linear 10s infinite;
-    -moz-animation: scroll 100s linear 10s infinite;
-    -webkit-animation: scroll 100s linear 10s infinite;
-    -o-animation: scroll 100s linear 10s infinite;
+    animation: scroll 100s linear 13s infinite;
+    -moz-animation: scroll 100s linear 13s infinite;
+    -webkit-animation: scroll 100s linear 13s infinite;
+    -o-animation: scroll 100s linear 13s infinite;
 }
 
 .animate-text {
@@ -94,33 +107,56 @@ p {
 
 @keyframes fade {
     0% { opacity: 0; }
-    50% { opacity: 1; }
+    20% { opacity: 1; }
+    80% { opacity: 1; }
     100% { opacity: 0; }
 }
 
 @-moz-keyframes fade {
     0% { opacity: 0; }
-    50% { opacity: 1; }
+    20% { opacity: 1; }
+    80% { opacity: 1; }
     100% { opacity: 0; }
 }
 
 @-webkit-keyframes fade {
     0% { opacity: 0; }
-    50% { opacity: 1; }
+    20% { opacity: 1; }
+    80% { opacity: 1; }
     100% { opacity: 0; }
 }
 
 @-o-keyframes fade {
     0% { opacity: 0; }
-    50% { opacity: 1; }
+    20% { opacity: 1; }
+    80% { opacity: 1; }
     100% { opacity: 0; }
 } 
 
 /* Logo */
 
 @keyframes logo {
-    0% { opacity: 1; scale: 1; }
-    100% { opacity: 0; scale: 0.1; }
+    0% { opacity: 1; transform: scale(2.75); width: 18em; top: 10%; }
+    50% { opacity: 1; width: 18em; }
+    100% { opacity: 0; transform: scale(0.1); width: 18em; top: 45%; }
+}
+
+@-moz-keyframes logo {
+    0% { opacity: 1; transform: scale(2.75); width: 18em; top: 10%; }
+    50% { opacity: 1; width: 18em; }
+    100% { opacity: 0; transform: scale(0.1); width: 18em; top: 45%; }
+}
+
+@-webkit-keyframes logo {
+    0% { opacity: 1; transform: scale(2.75); width: 18em; top: 10%; }
+    50% { opacity: 1; width: 18em; }
+    100% { opacity: 0; transform: scale(0.1); width: 18em; top: 45%; }
+}
+
+@-o-keyframes logo {
+    0% { opacity: 1; transform: scale(2.75); width: 18em; top: 10%; }
+    50% { opacity: 1; width: 18em; }
+    100% { opacity: 0; transform: scale(0.1); width: 18em; top: 45%; }
 }
 
 /* Scroll */
